spec変更
